# langchain-rag-agent-with-leann

./: .dockerignore  .env.example  .gitattributes  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  graph.py  langgraph.json  pyproject.toml  requirements.txt
frontend/: .env.example  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatMessageBubble.tsx  ChatWindow.tsx  IntermediateStep.tsx
frontend/hooks/: useLangGraphChat.ts
prompts/: search_tool_description.yaml  system_prompt.yaml
vectorstore/: langchain-docs.index  langchain-docs.leann.meta.json  langchain-docs.leann.passages.idx  langchain-docs.leann.passages.jsonl
